Job detail Revamp
Working on Job detail Revamp

--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -150,6 +150,7 @@
     <!-- New connect colors-->
     <color name="connect_border_color">#1A3A42C7</color>
     <color name="connect_dark_blue_color">#3942C7</color>
+    <color name="connect_darker_blue_color">#353BA8</color>
     <color name="connect_blue_color">#3A42C7</color>
     <color name="connect_yellowish_orange_color">#F3B34D</color>
     <color name="connect_light_grey">#D9D9D9</color>
