--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -156,7 +156,10 @@
     <color name="connect_blackist_dark_blue_color">#141859</color>
     <color name="connect_yellowish_orange_color">#F3B34D</color>
     <color name="connect_light_grey">#D9D9D9</color>
+    <color name="connect_grey">#9A9A9A</color>
     <color name="connect_divider_color">#E5E7EB</color>
     <color name="connect_background_color">#f2f5ff</color>
     <color name="connect_aquva">#88BEE1</color>
+    <color name="connect_green">#16A085</color>
+    <color name="connect_red">#EA6944</color>
 </resources>
