--- a/app/res/layout/fragment_recovery_code.xml
+++ b/app/res/layout/fragment_recovery_code.xml
@@ -152,13 +152,14 @@
             android:gravity="start|center"
             android:id="@+id/back_button"
             android:layout_alignParentLeft="true"
-            android:layout_height="40dp"
             android:layout_below="@id/connect_pin_verify_forgot"
-            android:layout_margin="16dp"
+            android:layout_height="40dp"
             android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_width="wrap_content"
+            android:visibility="gone"
             android:text="Learn More"
             app:roundButtonBorderColor="@color/border_grey"
             app:roundButtonBorderVisible="true"
