--- a/app/res/layout/fragment_phone.xml
+++ b/app/res/layout/fragment_phone.xml
@@ -6,84 +6,48 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     tools:context="org.commcare.fragments.connectId.ConnectIDSignupFragment">
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_height="match_parent"
-        android:layout_marginTop="120px"
+        android:layout_marginTop="80dp"
+        android:id="@+id/firstLayout"
         android:layout_width="match_parent"
         android:orientation="vertical">
-
-        <CheckBox
-            android:id="@+id/connect_consent_check"
-            android:layout_below="@id/phone_layout"
+        <ImageView
+            android:id="@+id/company_logo"
+            android:layout_gravity="center"
+            android:layout_height="32dp"
+            android:layout_width="wrap_content"
+            android:src="@drawable/ic_dimagi_logo" />
+        <View
+            android:background="@android:color/darker_gray"
+            android:id="@+id/divider"
+            android:layout_height="1dp"
+            android:layout_marginTop="40dp"
+            android:layout_width="fill_parent" />
+        <TextView
+            android:id="@+id/phone_title"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
-            android:padding="1dp"
             android:layout_marginTop="16dp"
-            android:layout_width="match_parent"
-            android:text="@string/consent_string"
-            android:textColor="@color/connect_subtext"
-            android:textFontWeight="500"
-            android:textSize="12sp" />
-
-        <ImageView
-            android:id="@+id/company_logo"
-            android:layout_centerHorizontal="true"
-            android:layout_height="32dp"
             android:layout_width="wrap_content"
-            android:src="@drawable/ic_dimagi_logo" />
-
-        <LinearLayout
-            android:id="@+id/phone_layout"
-            android:layout_below="@id/name_layout"
+            android:text="ConnectId Signup"
+            android:fontFamily="@font/roboto_bold"
+            android:textColor="@color/connect_dark_blue_color"
+            android:textSize="16sp" />
+        <TextView
+            android:id="@+id/phone_sub_text"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:layout_marginHorizontal="16dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:background="@color/black"
-                android:backgroundTint="@color/connect_light_grey"
-                android:layout_height="48dp"
-                android:layout_width="48dp"
-                android:layout_gravity="bottom"
-                android:padding="1dp"
-                android:src="@drawable/ic_outline_phone_24" />
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/phone_input_layout"
-                android:layout_width="match_parent"
-
-                android:layout_height="wrap_content"
-                app:errorEnabled="true">
-               <LinearLayout
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content">
-                   <EditText
-                       android:layout_marginLeft="16dp"
-                       android:id="@+id/countryCode"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:hint="+91"
-                       android:background="@drawable/login_edit_text"/>
-
-                   <AutoCompleteTextView
-                       android:id="@+id/connect_primary_phone_input"
-                       android:layout_width="fill_parent"
-                       android:layout_height="wrap_content"
-                       android:inputType="numberDecimal"
-                       android:background="@drawable/login_edit_text"
-                       android:digits="1234567890"
-                       android:focusable="true"
-                       android:hint="0000000"
-                       android:focusableInTouchMode="true"/>
-               </LinearLayout>
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-        </LinearLayout>
-
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_width="wrap_content"
+            android:text="ConnectId Signup"
+            android:fontFamily="@font/roboto_regular"
+            android:textColor="@color/connect_subtext"
+            android:textSize="12sp" />
         <LinearLayout
             android:gravity="center"
             android:id="@+id/name_layout"
@@ -103,23 +67,129 @@
                 android:layout_width="48dp"
                 android:padding="1dp"
                 android:src="@drawable/ic_outline_person_24" />
-                <com.google.android.material.textfield.TextInputEditText
-                    android:background="@drawable/login_edit_text"
-                    android:hint="@string/connect_register_name"
-                    android:id="@+id/nameTextValue"
-                    android:imeOptions="actionNext"
-                    android:layout_marginLeft="16dp"
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:background="@drawable/login_edit_text"
+                android:hint="@string/connect_register_name"
+                android:id="@+id/nameTextValue"
+                android:paddingStart="8dp"
+                android:imeOptions="actionNext"
+                android:layout_marginLeft="16dp"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent" />
 
         </LinearLayout>
-
         <LinearLayout
-            android:id="@+id/button_layout"
-            android:layout_alignParentBottom="true"
+            android:id="@+id/phone_layout"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:layout_width="match_parent">
+            android:layout_width="match_parent"
+            android:layout_marginHorizontal="16dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:background="@color/black"
+                android:backgroundTint="@color/connect_light_grey"
+                android:layout_height="48dp"
+                android:layout_width="48dp"
+                android:layout_gravity="start"
+                android:src="@drawable/ic_outline_phone_24" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:layout_marginLeft="16dp"
+                        android:id="@+id/countryCode"
+                        android:gravity="center"
+                        android:paddingHorizontal="8dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="+91"
+                        android:background="@drawable/login_edit_text"/>
+
+                    <AutoCompleteTextView
+                        android:id="@+id/connect_primary_phone_input"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="textStart"
+                        android:inputType="numberDecimal"
+                        android:paddingStart="8dp"
+                        android:background="@drawable/login_edit_text"
+                        android:digits="1234567890"
+                        android:focusable="true"
+                        android:hint="0000000000"
+                        android:focusableInTouchMode="true"/>
+                </LinearLayout>
+                <TextView
+                    android:id="@+id/errorTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/holo_red_light"
+                    android:visibility="visible"
+                    android:paddingStart="16dp"
+                    android:paddingTop="4dp"
+                />
+                </LinearLayout>
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <CheckBox
+                android:id="@+id/connect_consent_check"
+                android:layout_below="@id/phone_layout"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:layout_marginStart="16dp"
+                android:padding="1dp"
+                android:layout_marginTop="16dp"
+                android:layout_width="wrap_content"
+                android:textColor="@color/connect_subtext"
+                android:textFontWeight="500"
+                android:textSize="13sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/checkText"
+                android:textSize="12sp"
+                android:layout_marginTop="16dp"
+                android:letterSpacing="0.1"
+                android:lineSpacingExtra="3dp"
+                android:textColor="@color/connect_subtext"
+                android:padding="8dp"/>
+        </LinearLayout>
+
+        <org.commcare.views.connect.RoundedButton
+            android:id="@+id/continue_button"
+            android:gravity="start|center"
+            android:layout_height="40dp"
+            android:layout_gravity="end"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_width="wrap_content"
+            android:text="@string/review"
+            app:roundButtonTextColor="@color/white"
+            app:roundButtonBackgroundColor="@color/connect_blue_color"
+            app:roundButtonBorderRadius="@dimen/dp48"
+            app:roundButtonIcon="@drawable/connect_right_arrow"
+            app:roundButtonIconLeftAlign="false"/>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/button_layout"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/firstLayout"
+        android:layout_gravity="bottom"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_width="match_parent">
             <TextView
                 android:id="@+id/button_title"
                 android:layout_height="wrap_content"
@@ -146,67 +216,5 @@
 
 
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/phone_title"
-            android:layout_below="@id/divider"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_width="wrap_content"
-            android:text="ConnectId Signup"
-            android:fontFamily="@font/roboto_bold"
-            android:textColor="@color/connect_dark_blue_color"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/phone_sub_text"
-            android:layout_below="@id/phone_title"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_width="wrap_content"
-            android:text="ConnectId Signup"
-            android:fontFamily="@font/roboto_regular"
-            android:textColor="@color/connect_subtext"
-            android:textSize="12sp" />
-
-        <View
-            android:background="@android:color/darker_gray"
-            android:id="@+id/divider1"
-            android:layout_above="@id/button_layout"
-            android:layout_height="1dp"
-            android:layout_width="fill_parent" />
-
-        <View
-            android:background="@android:color/darker_gray"
-            android:id="@+id/divider"
-            android:layout_below="@+id/company_logo"
-            android:layout_height="1dp"
-            android:layout_marginTop="40dp"
-            android:layout_width="fill_parent" />
-
-        <org.commcare.views.connect.RoundedButton
-            android:id="@+id/continue_button"
-            android:gravity="start|center"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/connect_consent_check"
-            android:layout_height="40dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_width="wrap_content"
-            android:text="@string/review"
-            app:roundButtonTextColor="@color/white"
-            app:roundButtonBackgroundColor="@color/connect_blue_color"
-            app:roundButtonBorderRadius="@dimen/dp48"
-            app:roundButtonIcon="@drawable/connect_right_arrow"
-            app:roundButtonIconLeftAlign="false"/>
-    </RelativeLayout>
-
-
 </FrameLayout>
 </layout>
