--- a/app/res/layout/square_card.xml
+++ b/app/res/layout/square_card.xml
@@ -28,6 +28,7 @@
 
             <org.commcare.views.SquareImageView
                 android:id="@+id/card_image"
+                android:padding="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
