--- a/app/res/layout/fragment_phone.xml
+++ b/app/res/layout/fragment_phone.xml
@@ -107,7 +107,7 @@
                         android:paddingHorizontal="8dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:hint="+91"
+                        android:text="@string/connect_phone_country_code_default"
                         android:background="@drawable/login_edit_text"/>
 
                     <AutoCompleteTextView
@@ -120,7 +120,7 @@
                         android:background="@drawable/login_edit_text"
                         android:digits="1234567890"
                         android:focusable="true"
-                        android:hint="0000000000"
+                        android:hint="@string/connect_phone_number_hint"
                         android:focusableInTouchMode="true"/>
                 </LinearLayout>
                 <TextView
@@ -156,11 +156,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/checkText"
-                android:textSize="12sp"
                 android:layout_marginTop="16dp"
                 android:letterSpacing="0.1"
                 android:lineSpacingExtra="3dp"
                 android:textColor="@color/connect_subtext"
+                android:text="@string/connect_consent_message_1"
                 android:padding="8dp"/>
         </LinearLayout>
 
