--- a/app/res/layout/screen_connect_password_verify.xml
+++ b/app/res/layout/screen_connect_password_verify.xml
@@ -1,93 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
-    <LinearLayout android:layout_width="match_parent"
+
+    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:background="@color/cc_core_bg"
-        android:orientation="vertical"
-        android:layout_marginStart="@dimen/content_start"
-        android:layout_marginEnd="@dimen/content_start">
+        android:background="@color/white"
+        android:orientation="vertical">
+
         <ImageView
             android:id="@+id/company_logo"
-            android:layout_centerHorizontal="true"
-            android:layout_height="32dp"
-            android:layout_marginTop="80dp"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="60dp"
+            android:contentDescription="@null"
             android:src="@drawable/ic_dimagi_logo" />
+
         <View
-            android:background="@android:color/darker_gray"
             android:id="@+id/divider"
-            android:layout_below="@+id/company_logo"
+            android:layout_width="fill_parent"
             android:layout_height="1dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="40dp"
-            android:layout_width="fill_parent" />
-    <TextView
-        android:id="@+id/connect_password_verify_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:layout_margin="@dimen/content_min_margin"
-        android:textColor="@color/connect_blue_color"
-        android:textSize="@dimen/text_large"
-        android:text="@string/connect_password_verify_title"/>
+            android:background="@android:color/darker_gray" />
 
-    <TextView
-        android:id="@+id/connect_password_verify_message"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/connect_subtext"
-        android:layout_margin="@dimen/content_min_margin"
-        android:gravity="start"
-        android:textSize="@dimen/text_small"
-        android:text="@string/connect_password_verify_message"/>
+        <org.commcare.views.connect.connecttextview.ConnectBoldTextView
+            android:id="@+id/connect_password_verify_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/connect_password_verify_title"
+            android:textColor="@color/connect_blue_color"
+            android:textSize="18sp" />
 
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content">
-      <ImageView
-          android:layout_width="48dp"
-          android:layout_height="48dp"
-          android:padding="1dp"
-          android:layout_gravity="bottom"
-          android:background="@color/black"
-          android:backgroundTint="@color/connect_light_grey"
-          android:src="@drawable/ic_outline_lock_24"/>
-      <com.google.android.material.textfield.TextInputLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_marginLeft="16dp"
-          app:passwordToggleEnabled="true">
-          <com.google.android.material.textfield.TextInputEditText
-              android:id="@+id/connect_password_verify_input"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@drawable/login_edit_text"
-              android:inputType="textPassword"
-              android:hint="@string/connect_password_verify"/>
-      </com.google.android.material.textfield.TextInputLayout>
-  </LinearLayout>
+        <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+            android:id="@+id/connect_password_verify_message"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="start"
+            android:text="@string/connect_password_verify_message"
+            android:textColor="@color/connect_subtext"
+            android:textSize="14sp" />
 
-    <TextView
-        android:id="@+id/connect_password_verify_forgot"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/content_min_margin"
-        android:gravity="start"
-        android:textColor="@color/connect_subtext"
-        android:textSize="@dimen/text_small"
-        android:text="@string/connect_password_verify_forgot"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp">
+
+            <LinearLayout
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:background="@drawable/connect_side_icon_bg"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@null"
+                    android:padding="1dp"
+                    android:src="@drawable/ic_outline_lock_24" />
+
+            </LinearLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:hintEnabled="false"
+                app:passwordToggleEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/connect_password_verify_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/connect_edit_text_bg"
+                    android:hint="@string/connect_password_verify"
+                    android:imeOptions="actionNext"
+                    android:inputType="textPassword"
+                    android:textColorHint="@color/connect_grey"
+                    android:paddingHorizontal="16dp" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+
+        <org.commcare.views.connect.connecttextview.ConnectRegularTextView
+            android:id="@+id/connect_password_verify_forgot"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/content_min_margin"
+            android:gravity="start"
+            android:text="@string/connect_password_verify_forgot"
+            android:textColor="@color/connect_subtext"
+            android:textSize="14sp" />
 
         <org.commcare.views.connect.RoundedButton
             android:id="@+id/connect_password_verify_button"
-            android:layout_gravity="end"
             android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_gravity="end"
             android:layout_margin="16dp"
             android:padding="16dp"
-            app:roundButtonBackgroundColor="@color/connect_blue_color"
-            app:roundButtonTextColor="@color/white"
-            android:layout_height="wrap_content"
+            app:roundButtonTextSize="6.5sp"
             android:text="@string/connect_password_verify_button"
-            />
+            app:roundButtonBackgroundColor="@color/connect_blue_color"
+            app:roundButtonTextColor="@color/white" />
     </LinearLayout>
 </layout>
