--- a/app/res/layout/fragment_recovery_code.xml
+++ b/app/res/layout/fragment_recovery_code.xml
@@ -2,180 +2,198 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-<FrameLayout
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    tools:context="org.commcare.fragments.newConnectId.RecoveryCode">
-
     <RelativeLayout
-        android:layout_height="match_parent"
-        android:layout_marginTop="120px"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/company_logo"
-            android:layout_centerHorizontal="true"
-            android:layout_height="32dp"
             android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginTop="60dp"
+            android:layout_centerHorizontal="true"
             android:src="@drawable/ic_dimagi_logo" />
 
         <View
             android:id="@+id/divider"
-            android:background="@android:color/darker_gray"
-            android:layout_below="@+id/company_logo"
+            android:layout_width="fill_parent"
             android:layout_height="1dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_below="@+id/company_logo"
             android:layout_marginTop="40dp"
-            android:layout_width="fill_parent" />
+            android:background="@android:color/darker_gray" />
 
-        <TextView
+        <org.commcare.views.connect.connecttextview.ConnectBoldTextView
             android:id="@+id/recovery_code_tilte"
-            android:layout_below="@id/divider"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_below="@id/divider"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_width="wrap_content"
+            android:layout_marginEnd="16dp"
             android:text="@string/create_a_new_recovery_code"
             android:textColor="@color/connect_dark_blue_color"
-            android:textFontWeight="600"
-            android:textSize="16sp" />
-        <TextView
+            android:textSize="18sp" />
+
+        <org.commcare.views.connect.connecttextview.ConnectMediumTextView
             android:id="@+id/phone_title"
-            android:layout_below="@id/recovery_code_tilte"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_below="@id/recovery_code_tilte"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:layout_width="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:text="@string/choose_a_6_digit_recovery_code"
             android:textColor="@color/connect_subtext"
-            android:textFontWeight="400"
             android:textSize="12sp" />
+
         <LinearLayout
             android:id="@+id/name_layout"
             android:layout_width="match_parent"
-            android:orientation="horizontal"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_below="@id/phone_title"
-            android:layout_margin="16dp"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:padding="1dp"
-                android:layout_gravity="bottom"
-                android:background="@color/black"
-                android:backgroundTint="@color/connect_light_grey"
-                android:src="@drawable/ic_outline_lock_24"/>
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp">
+
+            <LinearLayout
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:background="@drawable/connect_side_icon_bg"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@null"
+                    android:padding="1dp"
+                    android:src="@drawable/ic_outline_lock_24" />
+
+            </LinearLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/layoutTextInput"
                 android:layout_width="match_parent"
-                android:layout_marginStart="16dp"
                 android:layout_height="wrap_content"
+                app:hintEnabled="false"
                 app:passwordToggleEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/connect_pin_input"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:background="@drawable/login_edit_text"
-                    android:drawablePadding="5dp"
+                    android:layout_height="55dp"
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/connect_edit_text_bg"
+                    android:textColorHint="@color/connect_grey"
+                    android:paddingHorizontal="16dp"
+                    android:hint="@string/code"
                     android:imeOptions="actionNext"
-                    android:inputType="numberPassword"
-                    android:hint="@string/code"/>
-
+                    android:inputType="numberPassword"/>
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/confirm_code_layout"
-            android:layout_below="@id/name_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_width="match_parent"
-            android:orientation="horizontal">
+            android:layout_marginEnd="16dp"
+            android:layout_below="@id/name_layout" >
 
-            <ImageView
-                android:background="@color/black"
-                android:backgroundTint="@color/connect_light_grey"
-                android:layout_gravity="bottom"
-                android:layout_height="48dp"
-                android:layout_width="48dp"
-                android:padding="1dp"
-                android:src="@drawable/ic_outline_lock_24" />
+            <LinearLayout
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:background="@drawable/connect_side_icon_bg"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@null"
+                    android:padding="1dp"
+                    android:src="@drawable/ic_outline_lock_24" />
+
+            </LinearLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/connect_pin_repeat_holder"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:hintEnabled="false"
                 app:passwordToggleEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:background="@drawable/login_edit_text"
-                    android:drawablePadding="5dp"
-                    android:hint="@string/confirm_code"
                     android:id="@+id/connect_pin_repeat_input"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="numberPassword" />
-
+                    android:layout_height="55dp"
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/connect_edit_text_bg"
+                    android:imeOptions="actionDone"
+                    android:textColorHint="@color/connect_grey"
+                    android:paddingHorizontal="16dp"
+                    android:hint="@string/confirm_code"
+                    android:inputType="numberPassword"/>
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
-        <TextView
+
+        <org.commcare.views.connect.connecttextview.ConnectMediumTextView
             android:id="@+id/connect_pin_error_message"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/content_min_margin"
-            android:gravity="start"
-            android:textSize="@dimen/text_medium"
             android:layout_below="@id/confirm_code_layout"
-            android:textColor="@color/red"/>
-        <TextView
-            android:gravity="start"
-            android:id="@+id/connect_pin_verify_forgot"
-            android:layout_below="@id/connect_pin_error_message"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/content_min_margin"
-            android:layout_marginEnd="@dimen/content_min_margin"
-            android:layout_marginStart="@dimen/content_min_margin"
-            android:layout_marginTop="@dimen/content_min_margin"
-            android:layout_width="fill_parent"
-            android:text="@string/connect_pin_verify_forgot"
-            android:textSize="@dimen/text_medium" />
-
-        <org.commcare.views.connect.RoundedButton
-            android:gravity="start|center"
-            android:id="@+id/back_button"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@id/connect_pin_verify_forgot"
-            android:layout_height="40dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="start"
+            android:textColor="@color/red"
+            android:textSize="16sp" />
+
+        <org.commcare.views.connect.connecttextview.ConnectRegularTextView
+            android:id="@+id/connect_pin_verify_forgot"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/connect_pin_error_message"
+            android:layout_marginStart="@dimen/content_min_margin"
+            android:layout_marginTop="@dimen/content_min_margin"
+            android:layout_marginEnd="@dimen/content_min_margin"
+            android:layout_marginBottom="@dimen/content_min_margin"
+            android:gravity="start"
+            android:text="@string/connect_pin_verify_forgot"
+            android:textSize="16sp" />
+
+        <org.commcare.views.connect.RoundedButton
+            android:id="@+id/back_button"
             android:layout_width="wrap_content"
-            android:visibility="gone"
+            android:layout_height="40dp"
+            android:layout_below="@id/connect_pin_verify_forgot"
+            android:layout_alignParentLeft="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:gravity="start|center"
             android:text="Learn More"
+            android:visibility="gone"
             app:roundButtonBorderColor="@color/border_grey"
             app:roundButtonBorderVisible="true"
             app:roundButtonTextColor="@color/connect_blue_color" />
 
         <org.commcare.views.connect.RoundedButton
-            android:gravity="start|center"
             android:id="@+id/connect_pin_button"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/connect_pin_verify_forgot"
-            android:layout_height="40dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
             android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_below="@id/connect_pin_verify_forgot"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="16dp"
+            app:roundButtonTextSize="6.5sp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:gravity="start|center"
             android:text="Continue"
             app:roundButtonBackgroundColor="@color/connect_blue_color"
             app:roundButtonBorderRadius="@dimen/dp48"
@@ -184,9 +202,5 @@
             app:roundButtonTextColor="@color/white" />
 
 
-
     </RelativeLayout>
-
-
-</FrameLayout>
 </layout>
