--- a/app/res/layout/screen_connect_phone_verify.xml
+++ b/app/res/layout/screen_connect_phone_verify.xml
@@ -1,141 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:background="@color/cc_core_bg"
-        android:orientation="vertical"
-        android:layout_marginStart="@dimen/content_start"
-        android:layout_marginEnd="@dimen/content_start">
+        android:background="@color/white"
+        android:orientation="vertical">
+
         <ImageView
             android:id="@+id/company_logo"
-            android:layout_height="32dp"
-            android:layout_marginTop="64dp"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="60dp"
+            android:contentDescription="@null"
             android:src="@drawable/ic_dimagi_logo" />
+
         <View
-            android:background="@android:color/darker_gray"
             android:id="@+id/divider"
+            android:layout_width="fill_parent"
             android:layout_height="1dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="40dp"
-            android:layout_width="fill_parent" />
-        <TextView
-            android:fontFamily="@font/roboto_medium"
+            android:background="@color/connect_light_grey" />
+
+        <org.commcare.views.connect.connecttextview.ConnectBoldTextView
             android:id="@+id/connect_phone_verify_title"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_width="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:fontFamily="@font/roboto_medium"
             android:text="@string/enter_otp"
             android:textColor="@color/connect_dark_blue_color"
-            android:textFontWeight="500"
             android:textSize="16sp" />
+
         <LinearLayout
             android:id="@+id/phone_layout"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_width="wrap_content"
+            android:layout_marginStart="16dp"
             android:orientation="horizontal">
 
-            <TextView
+            <org.commcare.views.connect.connecttextview.ConnectRegularTextView
                 android:id="@+id/connect_phone_verify_label"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
                 android:layout_width="wrap_content"
-                android:text="+91 7748962888"
+                android:layout_marginEnd="16dp"
+                android:layout_height="wrap_content"
                 android:textColor="@color/connect_secondary_text"
-                android:textFontWeight="400"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                tools:text="+91 7748962888" />
 
-            <TextView
+            <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+                android:id="@+id/phone_change_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:clickable="true"
                 android:focusable="true"
-                android:id="@+id/phone_change_button"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
                 android:text="@string/change"
                 android:textColor="@color/connect_dark_blue_color"
                 android:textSize="14sp" />
         </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/otp_layout"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_width="match_parent"
-        android:orientation="horizontal">
-        <ImageView
-            android:background="@color/black"
-            android:backgroundTint="@color/connect_light_grey"
-            android:layout_height="48dp"
-            android:layout_width="48dp"
-            android:padding="1dp"
-            android:src="@drawable/ic_outline_lock_24" />
-        <EditText
-            android:id="@+id/connect_phone_verify_code"
+        <LinearLayout
+            android:id="@+id/otp_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="start"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:background="@drawable/connect_side_icon_bg"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="1dp"
+                    android:src="@drawable/ic_outline_lock_24" />
+
+            </LinearLayout>
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/connect_phone_verify_code"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_marginLeft="16dp"
+                android:background="@drawable/connect_edit_text_bg"
+                android:hint="OTP"
+                android:imeOptions="actionNext"
+                android:inputType="numberDecimal"
+                android:paddingStart="16dp"
+                android:textColorHint="@color/connect_grey"
+                tools:ignore="RtlSymmetry" />
+
+        </LinearLayout>
+
+        <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+            android:id="@+id/connect_phone_verify_error"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:hint="OTP"
-            android:background="@drawable/login_edit_text"
-            android:inputType="numberDecimal"/>
-    </LinearLayout>
+            android:layout_margin="@dimen/content_min_margin"
+            android:gravity="start"
+            android:textColor="@color/red"
+            android:textSize="14sp"
+            android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/connect_phone_verify_error"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/content_min_margin"
-        android:gravity="start"
-        android:textSize="@dimen/text_medium"
-        android:textColor="@color/red"
-        android:visibility="gone"/>
-
-    <TextView
-        android:id="@+id/connect_phone_verify_change"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/content_min_margin"
-        android:gravity="start"
-        android:textSize="@dimen/text_medium"
-        android:textColor="@color/blue"
-        android:text="@string/connect_verify_phone_change"
-        android:visibility="gone"/>
-
-        <TextView
-            android:fontFamily="@font/roboto_medium"
-            android:id="@+id/connect_phone_verify_resend"
+        <org.commcare.views.connect.connecttextview.ConnectRegularTextView
+            android:id="@+id/connect_phone_verify_change"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="80dp"
-            android:layout_marginTop="16dp"
+            android:layout_margin="@dimen/content_min_margin"
+            android:gravity="start"
+            android:text="@string/connect_verify_phone_change"
+            android:textColor="@color/blue"
+            android:textSize="16sp"
+            android:visibility="gone" />
+
+        <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+            android:id="@+id/connect_phone_verify_resend"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/roboto_medium"
             android:text="Resend OTP in 60s"
             android:textColor="@android:color/holo_blue_dark"
-            android:textFontWeight="500"
             android:textSize="12sp" />
-
 
         <org.commcare.views.connect.RoundedButton
             android:id="@+id/connect_phone_verify_button"
-            android:gravity="start|center"
-            android:layout_height="40dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_gravity="end"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_gravity="end"
-            android:layout_width="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:gravity="start|center"
             android:text="@string/connect_verify_phone_verify"
             app:roundButtonBackgroundColor="@color/connect_blue_color"
             app:roundButtonBorderRadius="@dimen/dp48"
             app:roundButtonIconLeftAlign="false"
             app:roundButtonIconTintColor="@color/white"
-            app:roundButtonTextColor="@color/white" />
+            app:roundButtonTextColor="@color/white"
+            app:roundButtonTextSize="6.5sp" />
 
     </LinearLayout>
 </layout>
