--- a/app/res/layout/screen_connect_primary_phone.xml
+++ b/app/res/layout/screen_connect_primary_phone.xml
@@ -1,130 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:background="@color/cc_core_bg"
-        android:orientation="vertical"
-        android:layout_marginStart="@dimen/content_start"
-        android:layout_marginEnd="@dimen/content_start">
+        android:background="@color/white"
+        android:orientation="vertical">
+
         <ImageView
             android:id="@+id/company_logo"
-            android:layout_centerHorizontal="true"
-            android:layout_height="32dp"
-            android:layout_marginTop="80dp"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="60dp"
+            android:contentDescription="@null"
             android:src="@drawable/ic_dimagi_logo" />
+
         <View
-            android:background="@android:color/darker_gray"
             android:id="@+id/divider"
-            android:layout_below="@+id/company_logo"
+            android:layout_width="fill_parent"
             android:layout_height="1dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="40dp"
-            android:layout_width="fill_parent" />
-        <TextView
+            android:background="@color/connect_light_grey" />
+
+        <org.commcare.views.connect.connecttextview.ConnectBoldTextView
             android:id="@+id/connect_primary_phone_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_margin="@dimen/content_min_margin"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/connect_phone_title_primary"
             android:textColor="@color/connect_blue_color"
-            android:textSize="@dimen/text_medium"
-            android:text="@string/connect_phone_title_primary"/>
+            android:textSize="16sp" />
 
-        <TextView
+        <org.commcare.views.connect.connecttextview.ConnectMediumTextView
             android:id="@+id/connect_primary_phone_message"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/content_min_margin"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
             android:gravity="start"
+            android:text="@string/connect_phone_message_primary"
             android:textColor="@color/connect_subtext"
-            android:textSize="@dimen/text_medium"
-            android:text="@string/connect_phone_message_primary"/>
+            android:textSize="14sp" />
+
+        <LinearLayout
+            android:id="@+id/phone_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal">
+
             <LinearLayout
-                android:id="@+id/phone_layout"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:layout_marginHorizontal="16dp"
-                android:orientation="horizontal">
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:background="@drawable/connect_side_icon_bg"
+                android:gravity="center">
 
                 <ImageView
-                    android:background="@color/black"
-                    android:backgroundTint="@color/connect_light_grey"
-                    android:layout_height="48dp"
-                    android:layout_width="48dp"
-                    android:layout_gravity="start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@null"
+                    android:padding="1dp"
                     android:src="@drawable/ic_outline_phone_24" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <EditText
-                            android:layout_marginLeft="16dp"
-                            android:id="@+id/countryCode"
-                            android:gravity="center"
-                            android:paddingHorizontal="8dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/connect_phone_country_code_default"
-                            android:background="@drawable/login_edit_text"/>
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/connect_edit_text_bg"
+                    android:padding="0dp">
 
-                        <AutoCompleteTextView
-                            android:id="@+id/connect_primary_phone_input"
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:textAlignment="textStart"
-                            android:inputType="numberDecimal"
-                            android:paddingStart="8dp"
-                            android:background="@drawable/login_edit_text"
-                            android:digits="1234567890"
-                            android:focusable="true"
-                            android:hint="@string/connect_phone_number_hint"
-                            android:focusableInTouchMode="true"/>
-                    </LinearLayout>
-                    <TextView
-                        android:id="@+id/errorTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@android:color/holo_red_light"
-                        android:visibility="visible"
-                        android:paddingStart="16dp"
-                        android:paddingTop="4dp"
-                        />
+                    <EditText
+                        android:id="@+id/countryCode"
+                        android:layout_width="64dp"
+                        android:layout_height="55dp"
+                        android:background="@null"
+                        android:gravity="center"
+                        android:hint="@string/connect_phone_country_code_default"
+                        android:inputType="number"
+                        android:text="@string/connect_phone_country_code_default"
+                        android:textColorHint="@color/connect_grey" />
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginVertical="10dp"
+                        android:background="@color/connect_blue_color_10" />
+
+                    <AutoCompleteTextView
+                        android:id="@+id/connect_primary_phone_input"
+                        android:layout_width="fill_parent"
+                        android:layout_height="55dp"
+                        android:background="@null"
+                        android:digits="1234567890"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:hint="@string/connect_phone_number_hint"
+                        android:inputType="numberDecimal"
+                        android:paddingLeft="16dp"
+                        android:textAlignment="textStart"
+                        android:textColorHint="@color/connect_grey" />
                 </LinearLayout>
 
-
-
-
+                <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+                    android:id="@+id/errorTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="16dp"
+                    android:paddingTop="4dp"
+                    android:textSize="14sp"
+                    android:textColor="@android:color/holo_red_light"
+                    android:visibility="gone" />
+            </LinearLayout>
 
 
         </LinearLayout>
 
-        <TextView
+        <org.commcare.views.connect.connecttextview.ConnectMediumTextView
             android:id="@+id/connect_primary_phone_availability"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/connect_subtext"
-            android:layout_margin="@dimen/content_min_margin"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:gravity="start"
-            android:textSize="@dimen/text_medium"/>
+            android:textColor="@color/connect_subtext"
+            android:textSize="16sp" />
 
         <org.commcare.views.connect.RoundedButton
             android:id="@+id/connect_primary_phone_button"
+            android:layout_width="120dp"
+            android:layout_height="45dp"
+            android:layout_gravity="end"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:paddingTop="@dimen/content_start"
+            android:paddingBottom="@dimen/content_start"
+            android:text="@string/connect_phone_button"
             app:roundButtonBackgroundColor="@color/connect_blue_color"
             app:roundButtonTextColor="@color/white"
-            android:layout_gravity="end"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/content_start"
-            android:paddingTop="@dimen/content_start"
-            android:layout_margin="16dp"
-            android:text="@string/connect_phone_button"/>
+            app:roundButtonTextSize="6.5sp" />
     </LinearLayout>
 
 </layout>
