--- a/app/res/layout/screen_connect_verify.xml
+++ b/app/res/layout/screen_connect_verify.xml
@@ -1,98 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_width="match_parent">
+        android:background="@color/white">
 
         <LinearLayout
-            android:background="@color/cc_core_bg"
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_marginEnd="@dimen/content_start"
-            android:layout_marginStart="@dimen/content_start"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:orientation="vertical">
 
-            <TextView
+            <org.commcare.views.connect.connecttextview.ConnectBoldTextView
                 android:id="@+id/connect_verify_title"
-                android:layout_gravity="center"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:text="@string/connect_verify_title"
                 android:textAlignment="center"
-                android:textColor="@color/cc_neutral_color"
+                android:textColor="@color/black"
                 android:textSize="@dimen/text_larger" />
 
-            <TextView
+            <org.commcare.views.connect.connecttextview.ConnectMediumTextView
                 android:id="@+id/connect_verify_message"
-                android:layout_gravity="center"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginBottom="10dp"
                 android:text="@string/connect_verify_message"
                 android:textAlignment="center"
                 android:textColor="@color/cc_neutral_color"
-                android:textSize="@dimen/text_medium" />
+                android:textSize="16sp" />
 
             <LinearLayout
-                android:background="@color/cc_core_bg"
                 android:id="@+id/connect_verify_fingerprint_container"
-                android:layout_height="wrap_content"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/connect_verify_fingerprint_icon"
-                    android:layout_gravity="center"
-                    android:layout_height="90dp"
                     android:layout_width="90dp"
-                    android:src="@drawable/fingerprint" />
+                    android:layout_height="90dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/fingerprint"
+                    app:tint="@color/connect_blue_color" />
 
                 <org.commcare.views.connect.RoundedButton
                     android:id="@+id/connect_verify_fingerprint_button"
+                    android:layout_width="fill_parent"
+                    android:layout_height="45dp"
                     android:layout_gravity="center"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/connect_verify_configure_fingerprint"
                     app:roundButtonBackgroundColor="@color/connect_blue_color"
                     app:roundButtonTextColor="@color/white"
-                    android:layout_marginTop="16dp"
-                    android:layout_height="wrap_content"
-                    android:layout_width="fill_parent"
-                    android:text="@string/connect_verify_configure_fingerprint"/>
+                    app:roundButtonTextSize="6sp" />
 
             </LinearLayout>
 
-            <TextView
+            <org.commcare.views.connect.connecttextview.ConnectMediumTextView
                 android:id="@+id/connect_verify_or"
-                android:layout_gravity="center"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/content_min_margin"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/content_min_margin"
                 android:text="@string/choice_or"
                 android:textSize="@dimen/text_medium" />
 
             <LinearLayout
-                android:background="@color/cc_core_bg"
                 android:id="@+id/connect_verify_pin_container"
-                android:layout_height="wrap_content"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/connect_verify_pin_icon"
-                    android:layout_gravity="center"
-                    android:layout_height="90dp"
                     android:layout_width="90dp"
-                    android:src="@drawable/pattern" />
+                    android:layout_height="90dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/pattern"
+                    app:tint="@color/connect_blue_color" />
+
                 <org.commcare.views.connect.RoundedButton
                     android:id="@+id/connect_verify_pin_button"
+                    android:layout_width="fill_parent"
+                    android:layout_height="45dp"
                     android:layout_gravity="center"
+                    android:layout_marginHorizontal="20dp"
                     android:layout_marginTop="16dp"
+                    android:text="@string/connect_verify_configure_pin"
                     app:roundButtonBackgroundColor="@color/connect_blue_color"
                     app:roundButtonTextColor="@color/white"
-                    android:layout_height="wrap_content"
-                    android:layout_width="fill_parent"
-                    android:text="@string/connect_verify_configure_pin"/>
+                    app:roundButtonTextSize="6sp" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
